package ca5;

public interface taiKhoanATM {
    boolean kiemtrasodu(int soTien);
    void nhanThongBao(int soTienRut, boolean thanhCong);


}
